--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -61,14 +61,14 @@ nav a:hover {
 }
 
 #greeting {
-    background-color: rgb(71, 181, 175, 0.5);
+    background-color: rgba(62, 158, 153, 0.5);
     padding: 20px 20px 20px 20px;
     
 }
 
 #greeting h1 {
     color: white;
-    font-size: 46px;
+    font-size: 40px;
     padding-bottom: 20px;
 }
 
@@ -94,7 +94,7 @@ button:hover {
     height: 30px;
 }
 
-section {
+#section1 {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -102,7 +102,7 @@ section {
     
 }
 
-section div {
+#section1 div {
    /* border: 2px solid rgb(0, 255, 255); */
     width: 500px;
     height: 380px;
@@ -111,4 +111,84 @@ section div {
 #greeting p {
     padding-right: 130px;
     color: white;
+}
+
+#introduction, #team {
+    color: white;
+    width: 1000px;
+    height: 200px;
+    background-color: rgba(62, 158, 153, 0.5);
+    display: flex;
+}
+
+#section2 {
+    height: 90vh;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-around;
+    justify-content: space-around;
+}
+
+#introduction h1, #introduction p {
+    color: white;
+}
+
+#team h2, .person {
+
+    width: 200px;
+}
+
+#introduction {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#team {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+#introduction h1 {
+    font-size: 40px;
+}
+
+#introduction {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+#team h2 {
+    font-size: 35px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    width: 150px;
+}
+
+.person {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 30px 30px 30px 30px;
+    background-color: rgb(181, 180, 180, 0.5);
+    border-radius: 10px;
+}
+
+#name {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#job_title {
+    text-align: center;
+    background-color: rgb(125, 194, 255);
+    border-radius: 15px;
+    padding: 5px 5px;
 }
