--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -39,6 +39,10 @@ nav ul li {
     align-items: center;
 }
 
+#nav_middle li {
+    padding: 8px 8px;
+}
+
 nav div {
 
     padding-left: 5px;
@@ -192,3 +196,63 @@ button:hover {
     border-radius: 15px;
     padding: 5px 5px;
 }
+
+/* --- Contact page --- */
+
+#section3 {
+    padding: 20px 20px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+    color: white;
+}
+
+#contact, #form {
+    padding: 20px 20px;
+    width: 600px;
+    height: 450px;
+    background-color: rgba(62, 158, 153, 0.5);
+}
+
+#form, #form div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#contact {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: column;
+}
+
+#contact h1, #contact p {
+    display: flex;
+    padding: 15px 40px;
+}
+
+#contact h1 {
+    font-size: 40px;
+}
+
+#form_name, #email, #message {
+    background-color: rgba(62, 158, 153, 0.5);
+    border: 0.5px solid white;
+    color: white;
+}
+
+#form_name, #email {
+    height: 30px;
+}
+
+#form_submit {
+    color: white;
+    background-color: rgba(62, 158, 153);
+    border: none;
+    border-radius: 10px;
+    height: 30px;
+}
+
+
+
